--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,13 @@
     <description>Plataforma para agendamento de aulas particulares</description>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <!-- 🔥 NOVA: Versão do JavaFX -->
         <javafx.version>17.0.6</javafx.version>
     </properties>
 
     <dependencies>
-        <!-- 🔥 JAVAFX (ADICIONAR ESTES) -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -34,7 +32,12 @@
             <version>${javafx.version}</version>
         </dependency>
 
-        <!-- ✅ JUnit para testes (JÁ TEM) -->
+        <dependency>
+            <groupId>com.gluonhq</groupId>
+            <artifactId>charm-glisten</artifactId>
+            <version>6.2.0</version> 
+        </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
@@ -42,29 +45,36 @@
             <scope>test</scope>
         </dependency>
         
-        <!-- ✅ Mockito para testes mock (JÁ TEM) -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>5.3.1</version>
             <scope>test</scope>
         </dependency>
+  
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>gluon-nexus-repository</id>
+            <url>https://nexus.gluonhq.com/nexus/content/repositories/releases/</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
-            <!-- Compilador -->
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
 
-            <!-- 🔥 NOVO: Plugin do JavaFX -->
+            
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
@@ -74,7 +84,7 @@
                 </configuration>
             </plugin>
             
-            <!-- JAR executável -->
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -88,7 +98,7 @@
                 </configuration>
             </plugin>
             
-            <!-- Executar aplicação -->
+            
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -98,7 +108,7 @@
                 </configuration>
             </plugin>
             
-            <!-- JavaDoc -->
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
