--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
             <version>5.3.1</version> <scope>test</scope>
         </dependency>
   
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <repositories>
@@ -115,7 +121,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.agendastudy.App</mainClass>
+                    <mainClass>com.agendastudy.Launcher</mainClass>
                 </configuration>
             </plugin>
             
